--- a/docs/index.css
+++ b/docs/index.css
@@ -34,3 +34,11 @@ APIのCSSを上書き
 .btn:active {
     background-color: rgba(255, 166, 0, 0.5);
 }
+
+.page {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100vh;
+}
