--- a/docs/index.css
+++ b/docs/index.css
@@ -4,16 +4,12 @@ APIのCSSを上書き
 
 */
 
-
-
-
-
-
 /*
 
 このアプリケーション用の新しいCSS
 
 */
+
 .row {
     box-sizing: border-box;
     padding: 0;
@@ -91,6 +87,7 @@ APIのCSSを上書き
     height: 400px;
 }
 
+/* 作成中 */
 
 #now-making {
     position: absolute;
@@ -103,6 +100,77 @@ APIのCSSを上書き
     text-align: center;
     width: 80%;
     z-index: 1000;
-    padding: 1em;
+    padding: 1em 0 2em 0;
     background-color: orange;
+    color: white;
+    border-radius: 10px;
 }
+
+#now-making p {
+    margin: 5px auto;
+}
+.loader,
+.loader:before,
+.loader:after {
+    border-radius: 50%;
+    width: 2.5em;
+    height: 2.5em;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation: load7 1.8s infinite ease-in-out;
+    animation: load7 1.8s infinite ease-in-out;
+}
+
+.loader {
+    color: #ffffff;
+    font-size: 10px;
+    margin: 80px auto;
+    position: relative;
+    text-indent: -9999em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+.loader:before,
+.loader:after {
+    content: '';
+    position: absolute;
+    top: 0;
+}
+
+.loader:before {
+    left: -3.5em;
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.loader:after {
+    left: 3.5em;
+}
+
+@-webkit-keyframes load7 {
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 2.5em 0 -1.3em;
+    }
+    40% {
+        box-shadow: 0 2.5em 0 0;
+    }
+}
+
+@keyframes load7 {
+    0%,
+    80%,
+    100% {
+        box-shadow: 0 2.5em 0 -1.3em;
+    }
+    40% {
+        box-shadow: 0 2.5em 0 0;
+    }
+}
+
+/* */
