--- a/docs/index.css
+++ b/docs/index.css
@@ -106,13 +106,23 @@ APIのCSSを上書き
 /* プランタイトル */
 
 #plan-title {
-    box-sizing: border-box;
+    /* box-sizing: border-box;
     text-align: center;
     background-color: orange;
     color: white;
     width: 100%;
     margin: 3px 0 3px 0;
-    padding: 0 0.5em;
+    padding: 0 0.5em; */
+
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    padding: 9px;
+    background-image: url("./img/title-bg.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center top;
+    background-size:contain;
 }
 
 /* 作成中 */
