--- a/docs/index.css
+++ b/docs/index.css
@@ -219,17 +219,35 @@ APIのCSSを上書き
     opacity: 0;
 }
 
-/* 経路エリア*/
+/* ポイントエリア*/
 
+/* ポイント名称 */
+.name-bar {
+    display: flex;
+    box-sizing: border-box;
+    margin: 5px 0;
+    background-color: orange;
+    color: white;
+}
 .name {
     box-sizing: border-box;
-    width: 100%;
+    /* width: 100%; */
     margin: 5px 0;
     padding: 3px;
-    background-color: orange;
     text-align: center;
+    flex: 1;
+}
+.map-btn {
+    box-sizing: border-box;
+    font-size: 10px;
     color: white;
-
+    text-decoration: none;
+    margin: 7px 2px;
+    padding: 1px 2px;
+    border: white 1px solid;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
 }
 .desc_box {
     max-height: 0px;
