フォント指定再度変更

--- a/docs/index.css
+++ b/docs/index.css
@@ -10,7 +10,19 @@ APIのCSSを上書き
 
 */
 body {
-    font-family: sans-serif;
+    font-family: 'Avenir',
+    'Helvetica Neue',
+    'Helvetica',
+    'Arial',
+    'Hiragino Sans',
+    'ヒラギノ角ゴシック',
+    YuGothic,
+    'Yu Gothic',
+    'メイリオ',
+    Meiryo,
+    'ＭＳ Ｐゴシック',
+    'MS PGothic',
+    sans-serif;
 }
 
 .row {
