--- a/docs/index.css
+++ b/docs/index.css
@@ -257,12 +257,15 @@ body {
     font-size: 10px;
     color: white;
     text-decoration: none;
-    margin: 7px 2px;
-    padding: 1px 2px;
-    border: white 1px solid;
-    border-radius: 3px;
+    margin: 0 5px;
+    /* padding: 1px 2px; */
+    /* border: white 1px solid;
+    border-radius: 3px; */
     display: flex;
     align-items: center;
+}
+.map-btn img {
+    height: 20px;
 }
 .desc_box {
     max-height: 0px;
