--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -84,7 +84,7 @@ body {
 }
 
 .center-box-period-image {
-    background-image: url("../img/bg.png");
+    background-image: url("../images/bg.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center top;
@@ -92,7 +92,7 @@ body {
 }
 
 .center-box-keyword-image {
-    background-image: url("../img/bg.png");
+    background-image: url("../images/bg.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center top;
@@ -113,6 +113,20 @@ body {
     height: 450px;
 }
 
+.center-box-how-to {
+    position: absolute;
+    box-sizing: border-box;
+    padding: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    text-align: center;
+    width: 90%;
+    height: 600px;
+}
+
 /* プランタイトル */
 
 #plan-title {
@@ -120,7 +134,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 9px;
-    background-image: url("https://matatavi.net/img/title-bg.png");
+    background-image: url("https://matatavi.net/images/title-bg.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center top;
